Alterando o caminho das imagens

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
     <div class="resume">
 
-        <img class="foto_curriculo" src="/foto curriculo.jpg" alt="foto do currículo" srcset="">
+        <img class="foto_curriculo" src="./foto curriculo.jpg" alt="foto do currículo" srcset="">
         <h2>Olá</h2>
         <p>Eu sou um estudante de programação, que adora montar computador e fazer projetos relacionados aos hobbies que
             eu gosto</p>
 
         <h2>Minhas habilidades</h2>
         <div class="habilidades">
-            <img src="/cat-typing.gif" alt="gato digitando no notebook" srcset="">
+            <img src="./cat-typing.gif" alt="gato digitando no notebook" srcset="">
             <p> Montagem de computadores e programação,
                 incluindo JavaScript, MySQL e C#. Tenho experiência prática em trabalho em equipe e estou entusiasmado
                 para aplicar meus conhecimentos em projetos reais. Procuro uma oportunidade para iniciar minha carreira
